--- a/less/extra-small-devices.less
+++ b/less/extra-small-devices.less
@@ -8,6 +8,17 @@
 		display: block;
 	}
 	
+	#header {
+		
+		.logo-box .logo {
+			background-image: url(/images/logo.sm.png);
+		}
+		
+		.top-nav ul li {
+			margin-left: 15px;
+		}
+	}
+	
 	#hero {
 		
 		h1 {
@@ -31,7 +42,6 @@
 	}
 	
 	.body-content {
-		margin: 0;
 		
 		.rounded-box {
 			margin-bottom: 20px;
